--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -36,6 +36,7 @@ jobs:
           docker push gcr.io/go-weather-forecast/python-hello-world:latest
 
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     environment: ${{ inputs.env }}
     env:
