--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -1,7 +1,7 @@
 name: Tenkai-API CI
 
 on: 
-  repository_dispatch:
+  workflow_dispatch:
     inputs:
       env:
         description: 'Environment'     
