--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -11,8 +11,6 @@ on:
         options:
         - prd
         - dev
-    banches:
-      - main
 
 jobs:
   build:
@@ -35,7 +33,7 @@ jobs:
       - name: Dockerize
         run: |
           gcloud auth configure-docker -q
-          docker build . -t gcr.io/$PROJECT/python-hello-world:$GITHUB_REF_NAME -t gcr.io/$PROJECT/python-hello-world:latest
+          docker build . --build-arg TAG=$GITHUB_REF_NAME -t gcr.io/$PROJECT/python-hello-world:$GITHUB_REF_NAME -t gcr.io/$PROJECT/python-hello-world:latest
           docker push gcr.io/$PROJECT/python-hello-world:$GITHUB_REF_NAME
           docker push gcr.io/$PROJECT/python-hello-world:latest
 
