--- a/.github/workflows/test-workflow.yaml
+++ b/.github/workflows/test-workflow.yaml
@@ -9,6 +9,6 @@ jobs:
       matrix:
         client: ["A", "B", "C"]
     steps:
-      name: Print
-      run: |
-        echo ${{ matrix.version }}
+      - name: Print
+        run: |
+          echo ${{ matrix.version }}
