--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -11,7 +11,6 @@ on:
         options:
         - prd
         - dev
-  tag:
 
 jobs:
   build:
@@ -21,6 +20,7 @@ jobs:
       PROJECT: ${{ secrets.PROJECT }}
     runs-on: ubuntu-latest
     steps:
+      - run: echo "Hello World"
       - name: Checkout Code
         uses: actions/checkout@v2
 
