--- a/.github/workflows/test-workflow.yaml
+++ b/.github/workflows/test-workflow.yaml
@@ -13,6 +13,6 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Trigger
-        run: gh workflow run build-and-deploy.yaml -f environment=dev --ref develop
+        run: gh workflow run build-and-deploy.yaml -f env=dev --ref develop
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
